<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/detail_photo"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:adjustViewBounds="true" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

<!--        <TextView-->
<!--            android:id="@+id/tv_detail_name"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="16dp"-->
<!--            android:layout_marginRight="16dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginBottom="8dp"-->
<!--            android:text="@string/anime_name"-->
<!--            android:textSize="32sp"-->
<!--            android:textStyle="bold"/>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_detail_eps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextContent"
                android:layout_marginEnd="16dp"
                android:text="@string/episodes" />

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextContent"
                android:text="@string/rating" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/Sinposis" />

        <TextView
            android:id="@+id/tv_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            style="@style/TextContent"
            android:lineSpacingMultiplier="1"
            android:text="@string/description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/streaming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_episode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>